# Seguidor_de_Linha_Evolutivo

./: .gitignore  CMakeLists.txt  README.md
Simulacao_CoppeliaSIm/: Seguidor_Cenário.ttt
checkpoints/: geracao0.txt  geracao1.txt  geracao2.txt  geracao3.txt  geracao4.txt  geracao5.txt  geracao6.txt  geracao7.txt  geracao8.txt
include/: Robo.h
src/: Robo.cpp  main.cpp
